fix alignment

--- a/people.css
+++ b/people.css
@@ -9,9 +9,9 @@ html {
 .column {
   float: left;
   width: 33.0%;
-  max-width: 190px;
+  max-width: 180px;
   margin-bottom: 0px;
-  padding: 0 10px;
+  padding: 0 5px;
 }
 
 @media (max-width: 450px) {
